lock double rate
